--- a/patches/tegra234-p3767-camera-p3768-imx296-imx296.dts
+++ b/patches/tegra234-p3767-camera-p3768-imx296-imx296.dts
@@ -12,7 +12,7 @@
 #include <dt-bindings/tegra234-p3767-0000-common.h>
 
 / {
-	overlay-name = "Camera IMX219-A and IMX296-C";
+	overlay-name = "Camera IMX296-C and IMX296-C";
 	jetson-header-name = "Jetson 24pin CSI Connector";
 	compatible = JETSON_COMPATIBLE_P3768;
 	/* IMX477 connected on cam0 and IMX219 connected on cam1 port */
@@ -33,15 +33,14 @@
 				ports {
 					#address-cells = <1>;
 					#size-cells = <0>;
-					vi_port0: port@0 {
+					port@0 {
 						reg = <0>;
-						rbpcv2_imx219_vi_in0: endpoint {
+						endpoint {
 							port-index = <1>;
-							bus-width = <2>;
-							remote-endpoint = <&rbpcv2_imx219_csi_out0>;
+							bus-width = <1>;
+							remote-endpoint = <&rbpcv3_imx296_csi_out0>;
 						};
 					};
-
 					port@1 {
 						reg = <1>;
 						rbpcv3_imx296_vi_in1: endpoint {
@@ -102,13 +101,9 @@
 						badge = "jakku_front_RBP194";
 						position = "front";
 						orientation = "1";
-						cam_module0_drivernode0: drivernode0 {
+						drivernode0 {
 							pcl_id = "v4l2_sensor";
-							sysfs-device-tree = "/sys/firmware/devicetree/base/bus@0/cam_i2cmux/i2c@0/rbpcv2_imx219_a@10";
-						};
-						cam_module0_drivernode1: drivernode1 {
-							pcl_id = "v4l2_lens";
-							sysfs-device-tree = "/sys/firmware/devicetree/base/bus@0/lens_imx219@RBPCV2";
+							sysfs-device-tree = "/sys/firmware/devicetree/base/bus@0/cam_i2cmux/i2c@1/rbpcv3_imx296_c@26";
 						};
 					};
 					module1 {
@@ -128,23 +123,23 @@
 						num-channels = <2>;
 						#address-cells = <1>;
 						#size-cells = <0>;
-						csi_chan0: channel@0 {
+						channel@0 {
 							reg = <0>;
 							ports {
 								#address-cells = <1>;
 								#size-cells = <0>;
-								csi_chan0_port0: port@0 {
+								port@0 {
 									reg = <0>;
-									rbpcv2_imx219_csi_in0: endpoint@0 {
+									rbpcv3_imx296_csi_in0: endpoint@0 {
 										port-index = <1>;
 										bus-width = <2>;
-										remote-endpoint = <&rbpcv2_imx219_out0>;
+										remote-endpoint = <&rbpcv3_imx296_out0>; // TODO 
 									};
 								};
-								csi_chan0_port1: port@1 {
+								port@1 {
 									reg = <1>;
-									rbpcv2_imx219_csi_out0: endpoint@1 {
-										remote-endpoint = <&rbpcv2_imx219_vi_in0>;
+									rbpcv3_imx296_csi_out0: endpoint@1 {
+										remote-endpoint = <&rbpcv3_imx296_vi_in0>; // TODO
 									};
 								};
 							};
@@ -165,7 +160,7 @@
 								port@1 {
 									reg = <1>;
 									rbpcv3_imx296_csi_out1: endpoint@3 {
-										remote-endpoint = <&rbpcv3_imx296_vi_in1>;
+									eremote-endpoint = <&rbpcv3_imx296_vi_in1>;
 									};
 								};
 							};
@@ -184,17 +179,20 @@
 						reg = <0>;
 						#address-cells = <1>;
 						#size-cells = <0>;
-						rbpcv2_imx219_a@10 {
+						rbpcv3_imx296_c@10 { // TODO
 							reset-gpios = <&gpio CAM0_PWDN GPIO_ACTIVE_HIGH>;
-							compatible = "sony,imx219";
+							compatible = "sony,imx296";
 							/* I2C device address */
 							reg = <0x10>;
 							/* V4L2 device node location */
 							devnode = "video0";
+                            clocks = <&imx296_fixed_cam_clk>;
+                            clock-names = "mclk";
+                            mclk = "mclk";
 							/* Physical dimensions of sensor */
-							physical_w = "3.680";
-							physical_h = "2.760";
-							sensor_model = "imx219";
+							physical_w = "5.0232";
+							physical_h = "3.7536";
+							sensor_model = "imx296";
 							use_sensor_mode_id = "true";
 							/**
 							* ==== Modes ====
@@ -315,167 +313,213 @@
 								default_exp_time = "2495"; /* us */
 								embedded_metadata_height = "2";
 							};
-							mode1 { /* IMX219_MODE_3280x1848_28FPS */
-								mclk_khz = "24000";
-								num_lanes = "2";
-								tegra_sinterface = "serial_b";
-								lane_polarity = "6";
+							mode0 {
+								// TODO(austin): Figure out what mclk actually resolves to and is used for.  We set mclk to it...  But I don't know what that does.  It appears in the datasheet?
+								mclk_khz = "54000";
+								num_lanes = "1";
+								tegra_sinterface = "serial_c";
 								phy_mode = "DPHY";
-								discontinuous_clk = "yes";
+								discontinuous_clk = "no";
 								dpcm_enable = "false";
 								cil_settletime = "0";
-								active_w = "3280";
-								active_h = "1848";
+								lane_polarity = "0";
+
+								active_w = "1456";
+								active_h = "1088";
 								mode_type = "bayer";
 								pixel_phase = "rggb";
 								csi_pixel_bit_depth = "10";
-								readout_orientation = "90";
-								line_length = "3448";
+								/* Only used by android */
+								readout_orientation = "0";
+								line_length = "1100";
 								inherent_gain = "1";
-								mclk_multiplier = "9.33";
-								pix_clk_hz = "182400000";
+								mclk_multiplier = "22";
+								pix_clk_hz = "118800000";
+
 								gain_factor = "16";
 								framerate_factor = "1000000";
 								exposure_factor = "1000000";
-								min_gain_val = "16"; /* 1.00x */
-								max_gain_val = "170"; /* 10.66x */
+			       				// TODO(austin): Min is actually 0, do we really need to get to it?
+								min_gain_val = "1"; /* 0db */
+								max_gain_val = "200"; /* 48 db */
 								step_gain_val = "1";
-								default_gain = "16"; /* 1.00x */
+								default_gain = "100"; // JC: was "1";
 								min_hdr_ratio = "1";
 								max_hdr_ratio = "1";
-								min_framerate = "2000000"; /* 2.0 fps */
-								max_framerate = "28000000"; /* 28.0 fps */
-								step_framerate = "1";
-								default_framerate = "28000000"; /* 28.0 fps */
-								min_exp_time = "13"; /* us */
-								max_exp_time = "683709"; /* us */
-								step_exp_time = "1";
-								default_exp_time = "2495"; /* us */
-								embedded_metadata_height = "2";
-							};
-							mode2 { /* IMX219_MODE_1920x1080_30FPS */
-								mclk_khz = "24000";
-								num_lanes = "2";
-								tegra_sinterface = "serial_b";
-								lane_polarity = "6";
-								phy_mode = "DPHY";
-								discontinuous_clk = "yes";
-								dpcm_enable = "false";
-								cil_settletime = "0";
-								active_w = "1920";
-								active_h = "1080";
-								mode_type = "bayer";
-								pixel_phase = "rggb";
-								csi_pixel_bit_depth = "10";
-								readout_orientation = "90";
-								line_length = "3448";
-								inherent_gain = "1";
-								mclk_multiplier = "9.33";
-								pix_clk_hz = "182400000";
-								gain_factor = "16";
-								framerate_factor = "1000000";
-								exposure_factor = "1000000";
-								min_gain_val = "16"; /* 1.00x */
-								max_gain_val = "170"; /* 10.66x */
-								step_gain_val = "1";
-								default_gain = "16"; /* 1.00x */
-								min_hdr_ratio = "1";
-								max_hdr_ratio = "1";
-								min_framerate = "2000000"; /* 2.0 fps */
-								max_framerate = "30000000"; /* 30.0 fps */
-								step_framerate = "1";
-								default_framerate = "30000000"; /* 30.0 fps */
-								min_exp_time = "13"; /* us */
-								max_exp_time = "683709"; /* us */
-								step_exp_time = "1";
-								default_exp_time = "2495"; /* us */
-								embedded_metadata_height = "2";
-							};
-							mode3 { /* IMX219_MODE_1640x1232_30FPS */
-								mclk_khz = "24000";
-								num_lanes = "2";
-								tegra_sinterface = "serial_b";
-								lane_polarity = "6";
-								phy_mode = "DPHY";
-								discontinuous_clk = "yes";
-								dpcm_enable = "false";
-								cil_settletime = "0";
-								active_w = "1640";
-								active_h = "1232";
-								mode_type = "bayer";
-								pixel_phase = "rggb";
-								csi_pixel_bit_depth = "10";
-								readout_orientation = "90";
-								line_length = "3448";
-								inherent_gain = "1";
-								mclk_multiplier = "9.33";
-								pix_clk_hz = "182400000";
-								gain_factor = "16";
-								framerate_factor = "1000000";
-								exposure_factor = "1000000";
-								min_gain_val = "16"; /* 1.00x */
-								max_gain_val = "170"; /* 10.66x */
-								step_gain_val = "1";
-								default_gain = "16"; /* 1.00x */
-								min_hdr_ratio = "1";
-								max_hdr_ratio = "1";
-								min_framerate = "2000000"; /* 2.0 fps */
-								max_framerate = "30000000"; /* 60.0 fps */
-								step_framerate = "1";
-								default_framerate = "30000000"; /* 60.0 fps */
-								min_exp_time = "13"; /* us */
-								max_exp_time = "683709"; /* us */
-								step_exp_time = "1";
-								default_exp_time = "2495"; /* us */
-								embedded_metadata_height = "2";
-							};
-							mode4 { /* IMX219_MODE_1280x720_60FPS */
-								mclk_khz = "24000";
-								num_lanes = "2";
-								tegra_sinterface = "serial_b";
-								lane_polarity = "6";
-								phy_mode = "DPHY";
-								discontinuous_clk = "yes";
-								dpcm_enable = "false";
-								cil_settletime = "0";
-								active_w = "1280";
-								active_h = "720";
-								mode_type = "bayer";
-								pixel_phase = "rggb";
-								csi_pixel_bit_depth = "10";
-								readout_orientation = "90";
-								line_length = "3448";
-								inherent_gain = "1";
-								mclk_multiplier = "9.33";
-								pix_clk_hz = "182400000";
-								gain_factor = "16";
-								framerate_factor = "1000000";
-								exposure_factor = "1000000";
-								min_gain_val = "16"; /* 1.00x */
-								max_gain_val = "170"; /* 10.66x */
-								step_gain_val = "1";
-								default_gain = "16"; /* 1.00x */
-								min_hdr_ratio = "1";
-								max_hdr_ratio = "1";
-								min_framerate = "2000000"; /* 2.0 fps */
-								max_framerate = "60000000"; /* 60.0 fps */
+								min_framerate = "64373"; /* 0.06... fps */
+								max_framerate = "60375670"; /* 60.3... fps */
 								step_framerate = "1";
 								default_framerate = "60000000"; /* 60.0 fps */
-								min_exp_time = "13"; /* us */
-								max_exp_time = "683709"; /* us */
+								// TODO(austin): Make exposure real after it works.
+								min_exp_time = "1"; /* us? */
+								//max_exp_time = "60375670"; /* us? */
+								max_exp_time = "1000"; /* us? */
 								step_exp_time = "1";
-								default_exp_time = "2495"; /* us */
+								default_exp_time = "800"; /* us */ /* JC: was set to 10 as default, flaking/murky image */
+
 								embedded_metadata_height = "2";
 							};
+							// mode1 { /* IMX219_MODE_3280x1848_28FPS */
+							// 	mclk_khz = "24000";
+							// 	num_lanes = "2";
+							// 	tegra_sinterface = "serial_b";
+							// 	lane_polarity = "6";
+							// 	phy_mode = "DPHY";
+							// 	discontinuous_clk = "yes";
+							// 	dpcm_enable = "false";
+							// 	cil_settletime = "0";
+							// 	active_w = "3280";
+							// 	active_h = "1848";
+							// 	mode_type = "bayer";
+							// 	pixel_phase = "rggb";
+							// 	csi_pixel_bit_depth = "10";
+							// 	readout_orientation = "90";
+							// 	line_length = "3448";
+							// 	inherent_gain = "1";
+							// 	mclk_multiplier = "9.33";
+							// 	pix_clk_hz = "182400000";
+							// 	gain_factor = "16";
+							// 	framerate_factor = "1000000";
+							// 	exposure_factor = "1000000";
+							// 	min_gain_val = "16"; /* 1.00x */
+							// 	max_gain_val = "170"; /* 10.66x */
+							// 	step_gain_val = "1";
+							// 	default_gain = "16"; /* 1.00x */
+							// 	min_hdr_ratio = "1";
+							// 	max_hdr_ratio = "1";
+							// 	min_framerate = "2000000"; /* 2.0 fps */
+							// 	max_framerate = "28000000"; /* 28.0 fps */
+							// 	step_framerate = "1";
+							// 	default_framerate = "28000000"; /* 28.0 fps */
+							// 	min_exp_time = "13"; /* us */
+							// 	max_exp_time = "683709"; /* us */
+							// 	step_exp_time = "1";
+							// 	default_exp_time = "2495"; /* us */
+							// 	embedded_metadata_height = "2";
+							// };
+							// mode2 { /* IMX219_MODE_1920x1080_30FPS */
+							// 	mclk_khz = "24000";
+							// 	num_lanes = "2";
+							// 	tegra_sinterface = "serial_b";
+							// 	lane_polarity = "6";
+							// 	phy_mode = "DPHY";
+							// 	discontinuous_clk = "yes";
+							// 	dpcm_enable = "false";
+							// 	cil_settletime = "0";
+							// 	active_w = "1920";
+							// 	active_h = "1080";
+							// 	mode_type = "bayer";
+							// 	pixel_phase = "rggb";
+							// 	csi_pixel_bit_depth = "10";
+							// 	readout_orientation = "90";
+							// 	line_length = "3448";
+							// 	inherent_gain = "1";
+							// 	mclk_multiplier = "9.33";
+							// 	pix_clk_hz = "182400000";
+							// 	gain_factor = "16";
+							// 	framerate_factor = "1000000";
+							// 	exposure_factor = "1000000";
+							// 	min_gain_val = "16"; /* 1.00x */
+							// 	max_gain_val = "170"; /* 10.66x */
+							// 	step_gain_val = "1";
+							// 	default_gain = "16"; /* 1.00x */
+							// 	min_hdr_ratio = "1";
+							// 	max_hdr_ratio = "1";
+							// 	min_framerate = "2000000"; /* 2.0 fps */
+							// 	max_framerate = "30000000"; /* 30.0 fps */
+							// 	step_framerate = "1";
+							// 	default_framerate = "30000000"; /* 30.0 fps */
+							// 	min_exp_time = "13"; /* us */
+							// 	max_exp_time = "683709"; /* us */
+							// 	step_exp_time = "1";
+							// 	default_exp_time = "2495"; /* us */
+							// 	embedded_metadata_height = "2";
+							// };
+							// mode3 { /* IMX219_MODE_1640x1232_30FPS */
+							// 	mclk_khz = "24000";
+							// 	num_lanes = "2";
+							// 	tegra_sinterface = "serial_b";
+							// 	lane_polarity = "6";
+							// 	phy_mode = "DPHY";
+							// 	discontinuous_clk = "yes";
+							// 	dpcm_enable = "false";
+							// 	cil_settletime = "0";
+							// 	active_w = "1640";
+							// 	active_h = "1232";
+							// 	mode_type = "bayer";
+							// 	pixel_phase = "rggb";
+							// 	csi_pixel_bit_depth = "10";
+							// 	readout_orientation = "90";
+							// 	line_length = "3448";
+							// 	inherent_gain = "1";
+							// 	mclk_multiplier = "9.33";
+							// 	pix_clk_hz = "182400000";
+							// 	gain_factor = "16";
+							// 	framerate_factor = "1000000";
+							// 	exposure_factor = "1000000";
+							// 	min_gain_val = "16"; /* 1.00x */
+							// 	max_gain_val = "170"; /* 10.66x */
+							// 	step_gain_val = "1";
+							// 	default_gain = "16"; /* 1.00x */
+							// 	min_hdr_ratio = "1";
+							// 	max_hdr_ratio = "1";
+							// 	min_framerate = "2000000"; /* 2.0 fps */
+							// 	max_framerate = "30000000"; /* 60.0 fps */
+							// 	step_framerate = "1";
+							// 	default_framerate = "30000000"; /* 60.0 fps */
+							// 	min_exp_time = "13"; /* us */
+							// 	max_exp_time = "683709"; /* us */
+							// 	step_exp_time = "1";
+							// 	default_exp_time = "2495"; /* us */
+							// 	embedded_metadata_height = "2";
+							// };
+							// mode4 { /* IMX219_MODE_1280x720_60FPS */
+							// 	mclk_khz = "24000";
+							// 	num_lanes = "2";
+							// 	tegra_sinterface = "serial_b";
+							// 	lane_polarity = "6";
+							// 	phy_mode = "DPHY";
+							// 	discontinuous_clk = "yes";
+							// 	dpcm_enable = "false";
+							// 	cil_settletime = "0";
+							// 	active_w = "1280";
+							// 	active_h = "720";
+							// 	mode_type = "bayer";
+							// 	pixel_phase = "rggb";
+							// 	csi_pixel_bit_depth = "10";
+							// 	readout_orientation = "90";
+							// 	line_length = "3448";
+							// 	inherent_gain = "1";
+							// 	mclk_multiplier = "9.33";
+							// 	pix_clk_hz = "182400000";
+							// 	gain_factor = "16";
+							// 	framerate_factor = "1000000";
+							// 	exposure_factor = "1000000";
+							// 	min_gain_val = "16"; /* 1.00x */
+							// 	max_gain_val = "170"; /* 10.66x */
+							// 	step_gain_val = "1";
+							// 	default_gain = "16"; /* 1.00x */
+							// 	min_hdr_ratio = "1";
+							// 	max_hdr_ratio = "1";
+							// 	min_framerate = "2000000"; /* 2.0 fps */
+							// 	max_framerate = "60000000"; /* 60.0 fps */
+							// 	step_framerate = "1";
+							// 	default_framerate = "60000000"; /* 60.0 fps */
+							// 	min_exp_time = "13"; /* us */
+							// 	max_exp_time = "683709"; /* us */
+							// 	step_exp_time = "1";
+							// 	default_exp_time = "2495"; /* us */
+							// 	embedded_metadata_height = "2";
+							// };
 							ports {
 								#address-cells = <1>;
 								#size-cells = <0>;
 								port@0 {
 									reg = <0>;
-									rbpcv2_imx219_out0: endpoint {
+									rbpcv3_imx296_out0: endpoint {
 										port-index = <1>;
-										bus-width = <2>;
-										remote-endpoint = <&rbpcv2_imx219_csi_in0>;
+										bus-width = <1>; //. TODO double check bus width
+										remote-endpoint = <&rbpcv3_imx296_csi_in0>;
 									};
 								};
 							};
@@ -487,7 +531,7 @@
 						#address-cells = <1>;
 						#size-cells = <0>;
 						rbpcv3_imx296_c@1a {
-						    reset-gpios = <&gpio CAM1_PWDN GPIO_ACTIVE_HIGH>;
+              reset-gpios = <&gpio CAM1_PWDN GPIO_ACTIVE_HIGH>;
 							compatible = "sony,imx296";
 							/* I2C device address */
 							reg = <0x1a>;
@@ -647,13 +691,13 @@
 						};
 					};
 				};
-				lens_imx219@RBPCV2 {
-					min_focus_distance = "0.0";
-					hyper_focal = "0.0";
-					focal_length = "3.04";
-					f_number = "2.0";
-					aperture = "0.0";
-				};
+				// lens_imx219@RBPCV2 {
+				// 	min_focus_distance = "0.0";
+				// 	hyper_focal = "0.0";
+				// 	focal_length = "3.04";
+				// 	f_number = "2.0";
+				// 	aperture = "0.0";
+				// };
 				gpio@6000d000 {
 					camera-control-output-low {
 						gpio-hog;
